--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,5 @@
 <!doctype html>
-<h1>{{title}}</h1>
-
-<ul>
-    @for (user of users; track user.id) {
-        <li>
-            {{user.id}} - {{user.userName}}
-        </li>
-    }
-</ul>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px;">
+    <app-home></app-home>
+</div>
